fixed header w/ better spacing and request website button

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,8 +132,8 @@ nav {
 }
 
 .logo-img {
-    height: 40px;
-    margin-right: 0.5rem;
+    height: 100px;
+    margin-right: 0.4rem;
 }
 
 .logo:hover {
@@ -146,7 +146,7 @@ nav {
 }
 
 .nav-links li {
-    margin-left: 2rem;
+    margin-left: 5rem;
 }
 
 .nav-links a {
@@ -154,7 +154,7 @@ nav {
     color: var(--dark);
     font-weight: 500;
     position: relative;
-    padding-bottom: 3px;
+    padding-bottom: 10px;
     transition: color 0.3s;
 }
 
@@ -312,7 +312,7 @@ section {
 
 .section-header {
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 3ch;
 }
 
 .section-header h2 {
